--- a/package.json
+++ b/package.json
@@ -19,15 +19,24 @@
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "rollup": "^2.33.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "webpack": "^5.25.0",
+    "webpack-cli": "^4.5.0"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "webpack --config webpack.config.js",
     "prepare": "npm run build"
   },
-  "files": [
-    "dist",
-    "src",
-    "rollup.config.js"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
