--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "acorn": "^7.4.1",
     "acorn-walk": "^7.2.0",
-    "astring": "^1.4.3"
+    "astring": "^1.4.3",
+    "matter-js": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
