Added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@maissaninc/kidjs",
-  "version": "0.2.0",
+  "version": "0.2.1",
+  "homepage": "https://kidjs.org",
   "license": "MIT",
   "repository": {
     "type": "git",
