--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maissaninc/kidjs",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "homepage": "https://kidjs.org",
   "license": "MIT",
   "author": {
@@ -23,8 +23,10 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-async-to-generator": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.25.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-utf8-bom": "^1.3.0"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
