--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-async-to-generator": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "file-loader": "^6.2.0",
     "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0",
