--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "acorn": "^7.4.1",
     "acorn-walk": "^7.2.0",
     "astring": "^1.4.3",
-    "matter-js": "^0.17.1"
+    "matter-js": "^0.17.1",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
