--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "acorn": "^7.4.1",
     "acorn-walk": "^7.2.0",
+    "astravel": "^0.6.1",
     "astring": "^1.4.3",
     "matter-js": "^0.17.1",
     "seedrandom": "^3.0.5"
