--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "main": "dist/kid.js",
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.12",
     "acorn": "^7.4.1",
     "acorn-walk": "^7.2.0",
     "astravel": "^0.6.1",
